user home theme apis
